<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_monitor_background_heavy">

        <include
            android:id="@+id/toolbarContainer"
            layout="@layout/toolbar_binding" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_common_margin"
            android:background="@drawable/content_background"
            android:paddingHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarContainer"
            tools:visibility="visible">

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_old_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="@dimen/dimen_common_margin"
                app:editHint="@string/auth_old_password_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:name="@string/auth_old_password" />

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_new_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:editHint="@string/auth_new_password_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iev_old_password"
                app:name="@string/auth_new_password" />

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:editHint="@string/auth_confirm_password_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iev_new_password"
                app:name="@string/auth_confirm_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_completed"
                style="@style/MonitorButton.Blue"
                android:layout_marginBottom="50dp"
                android:text="@string/auth_completed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.8" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>