<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="viewModel"
            type="com.leevinapp.monitor.auth.ui.ResetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_monitor_heavy_blue">

        <include
            android:id="@+id/toolbarContainer"
            layout="@layout/toolbar_binding" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_sms_code"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_common_margin"
            android:background="@drawable/content_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarContainer"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_title"
                style="@style/MonitorText.Title"
                android:layout_margin="30dp"
                android:text="@string/auth_via_sms_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="@dimen/dimen_common_margin"
                app:editHint="@string/auth_new_password_hint"
                app:isIncludeSmsCode="false"
                app:editValue="@={viewModel.password}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                app:name="@string/auth_new_password" />

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:editHint="@string/auth_confirm_password_hint"
                app:editValue="@={viewModel.confirmPassword}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iev_password"
                app:name="@string/auth_confirm_password" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_completed"
                style="@style/MonitorButton.Blue"
                android:layout_marginBottom="50dp"
                android:text="@string/auth_completed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.8" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>