<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_monitor_background_heavy">

        <include
            android:id="@+id/toolbarContainer"
            layout="@layout/toolbar_binding" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_sms_code"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_common_margin"
            android:background="@drawable/content_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarContainer"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_title"
                style="@style/MonitorText.Title"
                android:layout_margin="30dp"
                android:text="@string/auth_via_sms_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="@dimen/dimen_common_margin"
                app:editHint="@string/auth_phone_number_hint"
                app:isIncludeSmsCode="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                app:name="@string/auth_phone_number" />

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_sms_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:editHint="@string/auth_sms_code_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iev_phone_number"
                app:name="@string/auth_sms_code" />

            <TextView
                android:id="@+id/tv_change_security_question"
                style="@style/MonitorText.Title"
                android:layout_marginTop="30dp"
                android:gravity="end"
                android:layout_marginHorizontal="@dimen/dimen_common_margin"
                android:text="@string/auth_via_security_question"
                android:textColor="@color/color_monitor_text_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iev_sms_code" />

            <TextView
                android:id="@+id/tv_other_tip"
                style="@style/MonitorText.Content"
                android:layout_marginStart="28dp"
                android:gravity="end"
                android:text="（也可通过预留的安全问题找回密码）"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_change_security_question"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_change_security_question" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_security_question"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_common_margin"
            android:background="@drawable/content_background"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarContainer"
            tools:visibility="gone">

            <TextView
                android:id="@+id/tv_title_question"
                style="@style/MonitorText.Title"
                android:layout_margin="30dp"
                android:text="@string/auth_via_security_question"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="@dimen/dimen_common_margin"
                app:editHint="@string/auth_security_question_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_question"
                app:name="@string/auth_security_question" />

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_answer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:editHint="@string/auth_security_answer_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iev_question"
                app:name="@string/auth_security_answer" />

            <TextView
                android:id="@+id/tv_change_sms_code"
                style="@style/MonitorText.Title"
                android:layout_marginHorizontal="@dimen/dimen_common_margin"
                android:layout_marginTop="30dp"
                android:gravity="end"
                android:text="@string/auth_via_sms_code"
                android:textColor="@color/color_monitor_text_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iev_answer" />

            <TextView
                android:id="@+id/tv_change_sms_code_tip"
                style="@style/MonitorText.Content"
                android:layout_marginStart="28dp"
                android:gravity="end"
                android:text="（也可通过手机短信验证码找回密码）"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_change_sms_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_change_sms_code" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>