<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <data>
        <variable
            name="viewModel"
            type="com.leevinapp.monitor.auth.ui.VerifyEmailViewModel" />
    </data>
    

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_monitor_background_heavy">

        <include
            android:id="@+id/toolbarContainer"
            layout="@layout/toolbar_binding" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_common_margin"
            android:background="@drawable/content_background"
            android:paddingHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarContainer"
            tools:visibility="visible">

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="@dimen/dimen_common_margin"
                app:editHint="@string/auth_email_address_hint"
                app:editValue="@={viewModel.email}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:name="@string/auth_email_address" />

            <com.leevinapp.monitor.core.common.view.ItemEditView
                android:id="@+id/iev_email_verify_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                app:editHint="@string/auth_sms_code_hint"
                app:isIncludeSmsCode="true"
                app:editValue="@={viewModel.emailVerifyCode}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iev_email"
                app:name="@string/auth_verify_code" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_completed"
                style="@style/MonitorButton.Blue"
                android:layout_marginBottom="50dp"
                android:text="@string/auth_completed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.8" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>