<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.leevinapp.monitor.auth.ui.RegisterViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_monitor_background_gray"
            android:paddingBottom="50dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_top"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/header_logon"
                app:layout_constraintDimensionRatio="h,5:2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_app_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/color_monitor_white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_role_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="机构管理"
                    android:textColor="@color/color_monitor_text_gray_2"
                    android:textSize="@dimen/text_size_smaller"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_app_name" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@mipmap/ic_launcher_round"
                app:layout_constraintBottom_toBottomOf="@+id/container_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_top" />

            <LinearLayout
                android:id="@+id/container_register_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:background="@drawable/auth_logon_background"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/dimen_common_margin"
                android:paddingVertical="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_top">

                <com.leevinapp.monitor.core.common.view.ItemEditView
                    android:id="@+id/iev_real_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    app:editHint="请输入姓名"
                    app:editValue="@={viewModel.realName}"
                    app:name="真实姓名" />

                <com.leevinapp.monitor.core.common.view.ItemEditView
                    android:id="@+id/iev_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    app:editHint="请输入手机号"
                    app:editValue="@={viewModel.phoneNumber}"
                    app:name="手机号" />

                <com.leevinapp.monitor.core.common.view.ItemEditView
                    android:id="@+id/iev_sms_code"
                    android:layout_width="match_parent"
                    app:name="@string/auth_sms_verify"
                    app:isIncludeSmsCode="true"
                    app:editHint="@string/auth_sms_code_hint"
                    app:editValue="@={viewModel.smsCode}"
                    android:layout_height="wrap_content"/>

                <com.leevinapp.monitor.core.common.view.ItemEditView
                    android:id="@+id/iev_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:editHint="请输入密码"
                    app:editValue="@={viewModel.password}"
                    app:name="密码" />

                <com.leevinapp.monitor.core.common.view.ItemEditView
                    android:id="@+id/iev_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:editHint="请输入确认密码"
                    app:editValue="@{viewModel.confirmPassword}"
                    app:name="确认密码" />

                <com.leevinapp.monitor.core.common.view.ItemEditView
                    android:id="@+id/iev_company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:editHint="请输入工作单位"
                    app:editValue="@{viewModel.companyName}"
                    app:name="工作单位" />

                <com.leevinapp.monitor.core.common.view.ItemEditView
                    android:id="@+id/iev_job_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:editHint="请输入工作职务"
                    app:editValue="@={viewModel.jobPosition}"
                    app:name="工作职务" />

                <com.leevinapp.monitor.core.common.view.ItemEditView
                    android:id="@+id/iev_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:editHint="请输入邮箱"
                    app:editValue="@={viewModel.mail}"
                    app:name="邮箱" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_register"
                style="@style/MonitorButton.Blue"
                android:layout_marginTop="30dp"
                android:text="@string/auth_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/container_register_input"
                app:layout_constraintWidth_percent="0.79" />

            <TextView
                android:id="@+id/tv_to_login"
                style="@style/MonitorText.Content"
                android:layout_marginTop="@dimen/dimen_common_margin"
                android:gravity="center"
                android:text="@string/auth_registered_to_login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/button_register"
                app:layout_constraintStart_toStartOf="@id/button_register"
                app:layout_constraintTop_toBottomOf="@+id/button_register" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</layout>
